"Finished" skim gui
Added NewSkim dialog and controller for adding new skims to the list
Project now correctly returns an empty list if skims.ids is missing
Added basics for change tracking (unfinished)